<resources>
    <string name="app_name">Eyepetizer</string>

    <string name="feed">精选</string>
    <string name="category">发现</string>
    <string name="pgc">作者</string>
    <string name="mine">我的</string>
    <string name="video_loading">视频加载中</string>
    <string name="video_loading_error">视频加载出错。。</string>
    <string name="type_normal">normal</string>
    <string name="type_bold">bold</string>
    <string name="type_lobster">lobster</string>

    <string name="net_error">网络错误，请检查网络连接情况</string>
    <string name="no_more">客官，没有更多啦啦啦</string>
    <string name="parse_error">解析出错了哦。。。。</string>
    <string name="none_point_error">嗨！我是空指针异常</string>
    <string name="do_not_get_id">未获取到ID</string>
    <string name="nothing_get">没有获取到数据哦。。。</string>
    <string name="time_out">网络超时。。。</string>
    <string name="hot">- hot -</string>
    <string name="input_yours">写下你的评论</string>
    <string name="net_error_retry">网络错误\n点击屏幕重试</string>
    <string name="no_comment">暂无评论\n快去评论吧</string>
    <string name="the_end">- The End -</string>
    <string name="comment_count">- %1$s条评论 -</string>
    <string name="item_count">%1$s - %2$s</string>
    <string name="video_count">%1$s个视频</string>
    <string name="today">Today</string>
    <string name="selection">每日精选</string>
    <string name="rank_week">周排行</string>
    <string name="rank_month">月排行</string>
    <string name="rank_history">总排行</string>
    <string name="date_list">按时间排序</string>
    <string name="share_list">按分享排序</string>
    <string name="recommend">精彩探索</string>
</resources>
