<?xml version="1.0" encoding="utf-8"?>
    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="40dp">
        <RadioButton
            android:textSize="10sp"
            android:gravity="center"
            android:text="@string/feed"
            android:textColor="@drawable/tab_selector"
            android:button="@null"
            android:drawableTop="@drawable/feed_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <RadioButton
            android:textSize="10sp"
            android:textColor="@drawable/tab_selector"
            android:button="@null"
            android:drawableTop="@drawable/category_selector"
            android:text="@string/category"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <RadioButton
            android:textSize="10sp"
            android:textColor="@drawable/tab_selector"
            android:button="@null"
            android:drawableTop="@drawable/pgc_selector"
            android:text="@string/pgc"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <RadioButton
            android:textSize="10sp"
            android:textColor="@drawable/tab_selector"
            android:button="@null"
            android:drawableTop="@drawable/profile_selector"
            android:text="@string/mine"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </RadioGroup>
