<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="90dp"
    android:paddingTop="12dp">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdv_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        app:placeholderImage="@drawable/account_default_avatar_circle"
        app:roundAsCircle="true"/>

    <com.hyc.eyepetizer.widget.CustomTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@id/sdv_icon"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:typeface="@string/type_bold"/>

    <com.hyc.eyepetizer.widget.CustomTextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/sdv_icon"
        android:textColor="@color/space_line_bg"
        android:textSize="10sp"/>

    <com.hyc.eyepetizer.widget.CustomTextView
        android:id="@+id/tv_content"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_time"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/sdv_icon"
        android:textSize="12sp"/>

    <com.hyc.eyepetizer.widget.CustomTextView
        android:id="@+id/tv_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:drawableRight="@drawable/ic_action_like"
        android:gravity="center"
        android:textColor="@color/space_line_bg"
        android:textSize="11sp"/>

    <com.hyc.eyepetizer.widget.CustomTextView
        android:layout_marginRight="5dp"
        android:id="@+id/tv_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_like_count"
        android:text="@string/hot"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:typeface="@string/type_lobster"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="64dp"
        android:background="@color/space_line_bg"/>
</RelativeLayout>
