<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="274dp"
        android:orientation="vertical">

        <com.hyc.eyepetizer.widget.CustomTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:typeface="@string/type_bold"/>

        <ImageView
            android:src="@drawable/ic_action_down_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="80dp"/>

        <com.hyc.eyepetizer.widget.CustomTextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/space_line_bg"
            android:textSize="11sp"/>

        <com.hyc.eyepetizer.widget.CustomTextView
            android:id="@+id/tv_input"
            android:text="@string/input_yours"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/tv_count"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="11sp"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdv_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rl_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_centerInParent="true"
                android:id="@+id/iv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.hyc.eyepetizer.widget.CustomTextView
                android:id="@+id/tv_error"
                android:text="@string/net_error_retry"
                android:textColor="@color/space_line_bg"
                android:layout_below="@id/iv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
