<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fresco="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fl_all"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/title_bar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <LinearLayout
                android:id="@+id/ll_rank_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <com.hyc.eyepetizer.widget.CustomTextView
                    android:id="@+id/tv_week"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank_week"
                    android:textColor="@color/title_black"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>

                <com.hyc.eyepetizer.widget.CustomTextView
                    android:id="@+id/tv_month"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank_month"
                    android:textColor="@color/title_black"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>

                <com.hyc.eyepetizer.widget.CustomTextView
                    android:textSize="12sp"
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rank_history"
                    android:textColor="@color/title_black"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <View
                android:id="@+id/indicator"
                android:background="@drawable/shape_indicator"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_video"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdv_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        fresco:fadeDuration="0"
        fresco:viewAspectRatio="1.44"/>
</FrameLayout>
