<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/title_bar"/>

    <com.hyc.eyepetizer.widget.PullToScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdv_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:roundAsCircle="true"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <com.hyc.eyepetizer.widget.CustomTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:typeface="@string/type_bold"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/sdv_icon"
                android:textColor="@color/title_black"/>

            <com.hyc.eyepetizer.widget.CustomTextView
                android:id="@+id/tv_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv_name"
                android:textColor="@color/title_black"/>

            <RelativeLayout
                android:id="@+id/rl_indicator"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="100dp"
                android:layout_below="@id/tv_name">

                <LinearLayout
                    android:id="@+id/ll_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <com.hyc.eyepetizer.widget.CustomTextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/rank_week"
                        android:textColor="@color/title_black"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"/>

                    <com.hyc.eyepetizer.widget.CustomTextView
                        android:id="@+id/tv_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/rank_history"
                        android:textColor="@color/title_black"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>

                <View
                    android:id="@+id/indicator"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_indicator"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"/>
    </com.hyc.eyepetizer.widget.PullToScrollView>
</LinearLayout>

